src/components/Navbar/Navbar.module.css
@import url("../../styles/colors.css");

nav {
  padding: 0.75rem 2rem;
  margin: 1rem;
  display: flex;
  align-items: center;
  justify-content: space-between;
  border-radius: 1rem;
  width: 600px;
  left: 50%;
  transform: translateX(-50%);
  box-shadow: 0 0 1rem var(--color-primary-shadow);
  position: fixed;
  min-width: 650px;
  background: rgba(255, 255, 255, 0.5);
  backdrop-filter: blur(10px);
  transition: 0.3s ease all;
}

nav.scrolled {
  margin: 0;
  width: 100vw;
}

.navitems {
  display: flex;
  align-items: center;
  gap: 0.5rem;
}

.navitem {
  border: 1px solid var(--color-primary-shadow);
  color: var(--text-primary);
  padding: 0.75rem;
  border-radius: 0.75rem;
  box-shadow: none;
  transition: 0.3s ease all;
}

.navitem:hover {
  background: var(--color-primary);
  box-shadow: 0 0 1.5rem -0.25rem var(--color-primary);
  color: #ffffff;
  cursor: pointer;
}

